build: added app-dir flag in start5